Update `ProductCard`: Adjust resource paths and resolution logic to handle rebrand-specific files in `lib/app`.